src/MACK/wwwroot/css/site.css
/* ... */
.nav-item:hover {
    color: var(--off-gray);
}

.nav-link {
    position: relative;
}

    .nav-link::after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        width: 0;
        height: 2px;
        background-color: #e3e3e3;
        transition: width 0.3s ease-in-out;
    }

    .nav-link:hover::after {
        width: 100%;
    }

.navbar .welcome span {
    margin-right: 0.6rem;
}

.nav-item a:hover {
    color: #9f9f9f;
}

.navbar a li {
    position: relative;
    color: #e3e3e3;
    text-decoration: none;
}

    .navbar a li:hover {
        color: #9f9f9f;
    }

    .navbar a li::after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        width: 0;
        height: 2px;
        background-color: #e3e3e3;
        transition: width 0.3s ease-in-out;
    }

    .navbar a li:hover::after {
        width: 100%;
    }

ul {
    list-style: none;
}

img {
    width: 100%;
}

.logo {
    width: clamp(100px, 20vw, 200px);
    height: auto;
    cursor: pointer;
}

/*HAMBURGER MENU*/
.hamburger {
    width: 30px;
    height: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    cursor: pointer;
}

.line {
    width: 100%;
    height: 2px;
    background-color: var(--light-color);
    transition: transform 0.3s ease-in-out;
}

    .line.active {
        transform: rotate(45deg) translate(6px, 6px);
    }

        .line.active:nth-child(2) {
            opacity: 0;
            transform: rotate(45deg);
        }

        .line.active:last-child {
            transform: rotate(-45deg) translate(6px, -6px);
        }

.menu-container {
    position: relative;
}

.menu {
    opacity: 0;
    visibility: hidden;
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    background-color: var(--primary-color);
    border-radius: 0 0 10px 10px; /* Apply border radius to bottom right and left corners */
    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
    z-index: 9999;
    margin-top: .25rem;
    backdrop-filter: blur(8px);
}

    .menu.active {
        opacity: 1;
        visibility: visible;
    }

    .menu ul {
        list-style: none;
        padding: 0;
        margin: 0;
    }

    .menu li {
        padding: 10px;
    }

    .menu a {
        display: block;
        text-decoration: none;
        color: var(--light-color);
        font-family: var(--font-headers);
    }

    .menu li:hover {
        background-color: var(--bg-light);
    }

    .menu li:last-child:hover {
        border-radius: 0 0 10px 10px;
    }

    .menu li:hover a {
        color: var(--primary-color);
    }
/*END OF HAMBURGER*/

/* REGISTRATION PAGE */
.checkbox-wrapper {
    display: flex;
    align-items: center;
    margin: auto 0;
}

.checkbox-text {
    margin-left: 10px; /* Adjust the value to achieve the desired spacing */
}

/* Vehicle Cards */
.vehicle-card {
    width: 100%;
    padding: 1rem;
    margin: 0 auto;
    text-align: center;
    background: var(--lighter-black);
    backdrop-filter: blur(8px);
    display: flex;
    flex-direction: column;
    border-radius: 10px;
}

    .vehicle-card ul {
        text-align: left;
        margin: auto;
        padding-left: 0;
        font-family: var(--font-primary);
        color: var(--light-color);
        letter-spacing: 1px;
    }

        .vehicle-card ul li span {
            font-weight: bold;
        }

    .vehicle-card h3 {
        font-size: 1.2rem;
        font-family: var(--font-headers);
        letter-spacing: 2px;
        font-weight: 400;
        color: var(--light-color);
    }

    .vehicle-card p {
        font-family: var(--font-primary);
        letter-spacing: 1px;
    }

    .vehicle-card img {
        width: 14rem;
        margin: 1rem auto;
    }

    .grid-4 .vehicle-card:hover {
        outline: 1px solid var(--primary-color);
    }

    .vehicle-data-title {
        margin: 4rem auto;
    }

    .vehicle-data-title.flex {
        justify-content: flex-start;
    }

    .vehicle-data-title h2 {
        margin-right: 10px;
    }

.card-header.flex {
    justify-content: space-between;
    align-items: center;
}

.vehicle-card ul li {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.vehicle-card ul {
    margin: 0rem;
    padding: 0.5rem 1rem;
}


/****************************************
*          UTILITY STYLES               *
*****************************************/

.body-container {
    max-width: 90%;
    margin: auto;
    padding: 0 2rem;
}

.index-card {
    margin: 2rem auto;
    padding: 2rem;
}

.vehicle-form {
    width: auto;
    border-radius: 10px;
}

.vehicle-column {
    margin: 0 2rem;
}

.home-copy {
    padding: 2rem
}

    .home-copy h2 {
        margin-left: 0;
        padding-left: 0;
    }

    .home-copy p {
        width: 80%;
        text-align: left;
        margin-left: 0;
    }

.login-register {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin: 1rem 0;
}

    .login-register a {
        color: var(--light-color);
    }

/* Flex */
.flex {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

/* Grid */
.grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1rem;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.grid-2 {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 1rem;
}

.grid-3 {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 1rem;
}

.grid-4 {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 1rem;
}

.grid-5 {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 1rem;
}


/* Text Styles*/
.x-large {
    font-size: 4rem;
    line-height: 1.2;
    margin-bottom: 1rem;
}

.large {
    font-size: 3rem;
    line-height: 1.2;
    margin-bottom: 1rem;
}
/* ... */

